# ReversePolishNotation

./: CMakeLists.txt  main.cpp  tests.cpp
src/: libRPN.cpp  libRPN.h
